[gd_scene load_steps=2 format=3 uid="uid://d1y4w6z8a9x0u"]

[ext_resource type="Script" path="res://game_over.gd" id="1"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 854.0
color = Color(0.15, 0.1, 0.1, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 260.0
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 40
text = "GAME OVER"
horizontal_alignment = 1

[node name="UI" type="Node" parent="."]

[node name="FinalScore" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 300.0
offset_right = 80.0
offset_bottom = 350.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 400.0
offset_right = 80.0
offset_bottom = 440.0
text = "PLAY AGAIN"

[node name="MenuButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 470.0
offset_right = 80.0
offset_bottom = 510.0
text = "MAIN MENU"
